# omujina-ros-CLI

./: .dockerignore  .gitignore  Dockerfile.test  README.md  pyproject.toml  start.sh
docs/: architecture.md  review-2026-03-22.md  virtualbox-test.md
scripts/: run-container-tests.sh  run-docker-tests.sh
src/mujina_assist/: __init__.py  app.py  main.py  models.py  ui.py
src/mujina_assist/services/: __init__.py  checks.py  jobs.py  policy.py  processes.py  shell.py  state.py  terminals.py  workspace.py
tests/: test_app.py  test_checks.py  test_jobs.py  test_policy.py  test_processes.py  test_shell.py  test_start_sh.py  test_state.py  test_terminals.py  test_ui.py  test_workspace.py
