[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mujina-assist"
version = "0.1.0"
description = "Japanese guided CLI for setting up and operating mujina_ros"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mujina-assist = "mujina_assist.main:main"

[tool.setuptools.packages.find]
where = ["src"]
